changed jetty version, updated tests